--- a/Axl.HTML
+++ b/Axl.HTML
@@ -96,7 +96,7 @@
   </h1>
 </header>
   <nav>
-    <a href="Index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="Shop.HTML">Shop</a>
     <a href="About.html">About</a>
     <a href="Contact Us.html">Contact</a>
@@ -110,7 +110,7 @@
     <div class="buy">
       <a href="#">Buy Now</a>
     </div>
-    <a href="Index.html" class="back-btn">Back to Home</a>
+    <a href="index.html" class="back-btn">Back to Home</a>
   </div>
 </body>
 </html>
