--- a/Contact Us.html
+++ b/Contact Us.html
@@ -94,7 +94,7 @@
     </a>
   </h1>
 </header>  <nav>
-    <a href="Index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="Shop.HTML">Shop</a>
     <a href="About.html">About</a>
     <a href="Contact Us.html">Contact</a>
