--- a/Slash Hat.html
+++ b/Slash Hat.html
@@ -98,7 +98,7 @@ nav a {
 </header>
 
   <nav>
-    <a href="Index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="Shop.HTML">Shop</a>
     <a href="About.html">About</a>
     <a href="Contact Us.html">Contact</a>
